servicemesh/front-end-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: front-end-service
  name: front-end-service-gateway
spec:
  host: front-end-nikhil-sockshop.apps.gvtbmodu.eastus.aroapp.io
  port:
    targetPort: 8080
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
