servicemesh/front-end-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end-virtualservice
spec:
  hosts:
    - front-end-sock-shop.apps.j2blk4r4.eastus.aroapp.io
  gateways:
    - sock-shop-wildcard-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: front-end.sock-shop.svc.cluster.local
